# Note

./: .env  components.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.cursor/rules/: global.mdc  tauri.mdc
doc/: README.md  REVIEW_ANALYSIS.md
doc/architecture/: 01-system-overview.md
doc/implementation/: 01-data-models.md  02-frontend-components.md  03-backend-services.md
doc/roadmap/: 01-feature-roadmap.md  02-corrected-roadmap.md
doc/testing/: 01-testing-strategy.md  02-validation-verification.md
src/: App.vue  main.ts  style.css
src-tauri/: .env  Cargo.toml
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: export.rs  mod.rs  nodes.rs  pages.rs  search.rs  stats.rs
src-tauri/src/errors/: app_error.rs  mod.rs
src-tauri/src/models/: block.rs  mod.rs  node.rs  page.rs  user.rs
src-tauri/src/services/: database.rs  link_service.rs  mod.rs
src-tauri/src/services/database/: connection.rs  export.rs  mod.rs  nodes.rs  schema.rs  search.rs  stats.rs
src-tauri/src/services/database/tests/: connection_tests.rs  link_tests.rs  mod.rs  node_tests.rs  stats_tests.rs
src-tauri/src/utils/: mod.rs  uuid_gen.rs  validation.rs
src/components/: CommandPalette.vue
src/components/editor/: BlockEditor.vue  PageEditor.vue
src/components/export/: ExportDialog.vue
src/router/: index.ts
src/services/: nodeService.ts
src/stores/: blockStore.ts  nodeStore.ts  pageStore.ts
src/views/: Editor.vue  Home.vue  JournalView.vue  NodeView.vue  Settings.vue
(+14 files in other folders)
