[package]
name = "note"
version = "0.1.0"
description = "A local-first, Git-native note-taking application"
authors = ["Note Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
name = "note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (Phase 1)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }

# Utilities
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.34", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system operations
dirs = "5.0"

# Testing
tempfile = "3.8"
regex = "1.9"

# Future phases (commented out for now)
# libgit2 = "0.18"  # Phase 2: Git integration
# tokio-tungstenite = "0.20"  # Phase 3: WebSocket
# yrs = "0.16"  # Phase 3: CRDT (if choosing Yjs)

